<resources>
    <string name="app_name">Block 1 To 9</string>
    <string name="moves_available">Moves available:</string>
    <string name="add_blocks">Add blocks</string>
    <string name="score">Score:</string>

    <string name="tv_rules_title">Rules of the game:</string>
    <string name="tv_rules1">1) You have to pair block with the same value to do points.
    When two blocks are paired they become one and its value will increase.</string>
    <string name="tv_rules2">2) When a column will be full the game will be over, so keep the column as low as possible.</string>
    <string name="tv_rules3">3) At first you can pair blocks only in the horizontal or vertical way.
    When a block arrives to 10 points its disappear and  will give you some special moves,
    so you can pair in oblique way as well for these limitated moves.</string>
    <string name="tv_rules4">4) Enjoy!</string>
    <string name="start_the_game">Tap to Begin</string>
    <string name="restart">Restart</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="pref_sound_title">Sound</string>
    <string name="pref_sound">Sound</string>
    <string name="pref_sound_summary">Sound effects</string>
    <string name="pref_sound_level">Sound level</string>
    <string name="pref_textsize">Text size</string>
    <string name="pref_textsize_descr">Enter text size</string>
    <string name="pref_textsize_summ">Set text size of the interface</string>
    <string name="title_activity_settings_ori">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
