<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.taiuti.block1to9.MainActivity">

    <Button
        android:text="@string/start_the_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startToBegin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sv_rules"
        android:foregroundGravity="top"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_rules_title"
                android:textSize="24sp"
                android:id="@+id/tv_rules_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_rules1"
                android:textSize="16sp"
                android:id="@+id/tv_rules1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_rules2"
                android:textSize="16sp"
                android:id="@+id/tv_rules2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_rules3"
                android:textSize="16sp"
                android:id="@+id/tv_rules3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_rules4"
                android:textSize="16sp"
                android:id="@+id/tv_rules4" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
